# deveploper_assist_codex

./: .gitignore  README.md  pyproject.toml
docs/: feature_hilog_agent_design.md
docs/superpowers/plans/: 2026-06-28-hilog-agent.md
docs/superpowers/specs/: 2026-06-28-hilog-agent-design.md
prompts/: feature_update.md  module_generation.md
src/hilog_agent/: add_module.py  analyze.py  cli.py  config.py  evidence.py  feature_store.py  hilog.py  llm.py  matcher.py  prompts.py  render.py  scoring.py
src/hilog_agent/schemas/: __init__.py  common.py  feature.py  module.py  results.py
tests/: test_add_module.py  test_cli.py  test_config.py  test_feature_schema.py  test_feature_store.py  test_hilog.py  test_llm_retry.py  test_logging.py  test_matcher.py  test_module_schema.py  test_prompts.py  test_scoring_evidence.py
tests/fixtures/features/camera_capture/: feature.yaml
tests/fixtures/features/camera_capture/modules/: camera_ui.yaml
